Add player stats and harden dungeon lifecycle
Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>